[gd_scene load_steps=14 format=3 uid="uid://cf715q64u028v"]

[ext_resource type="Script" path="res://stairs.gd" id="1_a0wvy"]
[ext_resource type="Texture2D" uid="uid://byivlgs4ro8tm" path="res://assets/textures/Tile 8 - 128x128.png" id="1_fn4g1"]
[ext_resource type="SphereMesh" uid="uid://004wttwvhpwe" path="res://assets/3d/my/stone_mesh.tres" id="3_aoeg0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fd7r2"]
shading_mode = 0
albedo_texture = ExtResource("1_fn4g1")
albedo_texture_force_srgb = true
uv1_scale = Vector3(3.005, 3.005, 3.005)
uv1_triplanar = true

[sub_resource type="CylinderMesh" id="CylinderMesh_1mm6u"]
material = SubResource("StandardMaterial3D_fd7r2")
top_radius = 0.4
bottom_radius = 2.0
height = 1.2
radial_segments = 12
rings = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nx80s"]
data = PackedVector3Array(0, 0.625, 0.4, 0.2, 0.625, 0.3464, 0, 0.2083, 0.9333, 0.2, 0.625, 0.3464, 0.4667, 0.2083, 0.8083, 0, 0.2083, 0.9333, 0.2, 0.625, 0.3464, 0.3464, 0.625, 0.2, 0.4667, 0.2083, 0.8083, 0.3464, 0.625, 0.2, 0.8083, 0.2083, 0.4667, 0.4667, 0.2083, 0.8083, 0.3464, 0.625, 0.2, 0.4, 0.625, 0, 0.8083, 0.2083, 0.4667, 0.4, 0.625, 0, 0.9333, 0.2083, 0, 0.8083, 0.2083, 0.4667, 0.4, 0.625, 0, 0.3464, 0.625, -0.2, 0.9333, 0.2083, 0, 0.3464, 0.625, -0.2, 0.8083, 0.2083, -0.4667, 0.9333, 0.2083, 0, 0.3464, 0.625, -0.2, 0.2, 0.625, -0.3464, 0.8083, 0.2083, -0.4667, 0.2, 0.625, -0.3464, 0.4667, 0.2083, -0.8083, 0.8083, 0.2083, -0.4667, 0.2, 0.625, -0.3464, 0, 0.625, -0.4, 0.4667, 0.2083, -0.8083, 0, 0.625, -0.4, 0, 0.2083, -0.9333, 0.4667, 0.2083, -0.8083, 0, 0.625, -0.4, -0.2, 0.625, -0.3464, 0, 0.2083, -0.9333, -0.2, 0.625, -0.3464, -0.4667, 0.2083, -0.8083, 0, 0.2083, -0.9333, -0.2, 0.625, -0.3464, -0.3464, 0.625, -0.2, -0.4667, 0.2083, -0.8083, -0.3464, 0.625, -0.2, -0.8083, 0.2083, -0.4667, -0.4667, 0.2083, -0.8083, -0.3464, 0.625, -0.2, -0.4, 0.625, 0, -0.8083, 0.2083, -0.4667, -0.4, 0.625, 0, -0.9333, 0.2083, 0, -0.8083, 0.2083, -0.4667, -0.4, 0.625, 0, -0.3464, 0.625, 0.2, -0.9333, 0.2083, 0, -0.3464, 0.625, 0.2, -0.8083, 0.2083, 0.4667, -0.9333, 0.2083, 0, -0.3464, 0.625, 0.2, -0.2, 0.625, 0.3464, -0.8083, 0.2083, 0.4667, -0.2, 0.625, 0.3464, -0.4667, 0.2083, 0.8083, -0.8083, 0.2083, 0.4667, -0.2, 0.625, 0.3464, 0, 0.625, 0.4, -0.4667, 0.2083, 0.8083, 0, 0.625, 0.4, 0, 0.2083, 0.9333, -0.4667, 0.2083, 0.8083, 0, 0.2083, 0.9333, 0.4667, 0.2083, 0.8083, 0, -0.2083, 1.4667, 0.4667, 0.2083, 0.8083, 0.7333, -0.2083, 1.2702, 0, -0.2083, 1.4667, 0.4667, 0.2083, 0.8083, 0.8083, 0.2083, 0.4667, 0.7333, -0.2083, 1.2702, 0.8083, 0.2083, 0.4667, 1.2702, -0.2083, 0.7333, 0.7333, -0.2083, 1.2702, 0.8083, 0.2083, 0.4667, 0.9333, 0.2083, 0, 1.2702, -0.2083, 0.7333, 0.9333, 0.2083, 0, 1.4667, -0.2083, 0, 1.2702, -0.2083, 0.7333, 0.9333, 0.2083, 0, 0.8083, 0.2083, -0.4667, 1.4667, -0.2083, 0, 0.8083, 0.2083, -0.4667, 1.2702, -0.2083, -0.7333, 1.4667, -0.2083, 0, 0.8083, 0.2083, -0.4667, 0.4667, 0.2083, -0.8083, 1.2702, -0.2083, -0.7333, 0.4667, 0.2083, -0.8083, 0.7333, -0.2083, -1.2702, 1.2702, -0.2083, -0.7333, 0.4667, 0.2083, -0.8083, 0, 0.2083, -0.9333, 0.7333, -0.2083, -1.2702, 0, 0.2083, -0.9333, 0, -0.2083, -1.4667, 0.7333, -0.2083, -1.2702, 0, 0.2083, -0.9333, -0.4667, 0.2083, -0.8083, 0, -0.2083, -1.4667, -0.4667, 0.2083, -0.8083, -0.7333, -0.2083, -1.2702, 0, -0.2083, -1.4667, -0.4667, 0.2083, -0.8083, -0.8083, 0.2083, -0.4667, -0.7333, -0.2083, -1.2702, -0.8083, 0.2083, -0.4667, -1.2702, -0.2083, -0.7333, -0.7333, -0.2083, -1.2702, -0.8083, 0.2083, -0.4667, -0.9333, 0.2083, 0, -1.2702, -0.2083, -0.7333, -0.9333, 0.2083, 0, -1.4667, -0.2083, 0, -1.2702, -0.2083, -0.7333, -0.9333, 0.2083, 0, -0.8083, 0.2083, 0.4667, -1.4667, -0.2083, 0, -0.8083, 0.2083, 0.4667, -1.2702, -0.2083, 0.7333, -1.4667, -0.2083, 0, -0.8083, 0.2083, 0.4667, -0.4667, 0.2083, 0.8083, -1.2702, -0.2083, 0.7333, -0.4667, 0.2083, 0.8083, -0.7333, -0.2083, 1.2702, -1.2702, -0.2083, 0.7333, -0.4667, 0.2083, 0.8083, 0, 0.2083, 0.9333, -0.7333, -0.2083, 1.2702, 0, 0.2083, 0.9333, 0, -0.2083, 1.4667, -0.7333, -0.2083, 1.2702, 0, -0.2083, 1.4667, 0.7333, -0.2083, 1.2702, 0, -0.625, 2, 0.7333, -0.2083, 1.2702, 1, -0.625, 1.7321, 0, -0.625, 2, 0.7333, -0.2083, 1.2702, 1.2702, -0.2083, 0.7333, 1, -0.625, 1.7321, 1.2702, -0.2083, 0.7333, 1.7321, -0.625, 1, 1, -0.625, 1.7321, 1.2702, -0.2083, 0.7333, 1.4667, -0.2083, 0, 1.7321, -0.625, 1, 1.4667, -0.2083, 0, 2, -0.625, 0, 1.7321, -0.625, 1, 1.4667, -0.2083, 0, 1.2702, -0.2083, -0.7333, 2, -0.625, 0, 1.2702, -0.2083, -0.7333, 1.7321, -0.625, -1, 2, -0.625, 0, 1.2702, -0.2083, -0.7333, 0.7333, -0.2083, -1.2702, 1.7321, -0.625, -1, 0.7333, -0.2083, -1.2702, 1, -0.625, -1.7321, 1.7321, -0.625, -1, 0.7333, -0.2083, -1.2702, 0, -0.2083, -1.4667, 1, -0.625, -1.7321, 0, -0.2083, -1.4667, 0, -0.625, -2, 1, -0.625, -1.7321, 0, -0.2083, -1.4667, -0.7333, -0.2083, -1.2702, 0, -0.625, -2, -0.7333, -0.2083, -1.2702, -1, -0.625, -1.7321, 0, -0.625, -2, -0.7333, -0.2083, -1.2702, -1.2702, -0.2083, -0.7333, -1, -0.625, -1.7321, -1.2702, -0.2083, -0.7333, -1.7321, -0.625, -1, -1, -0.625, -1.7321, -1.2702, -0.2083, -0.7333, -1.4667, -0.2083, 0, -1.7321, -0.625, -1, -1.4667, -0.2083, 0, -2, -0.625, 0, -1.7321, -0.625, -1, -1.4667, -0.2083, 0, -1.2702, -0.2083, 0.7333, -2, -0.625, 0, -1.2702, -0.2083, 0.7333, -1.7321, -0.625, 1, -2, -0.625, 0, -1.2702, -0.2083, 0.7333, -0.7333, -0.2083, 1.2702, -1.7321, -0.625, 1, -0.7333, -0.2083, 1.2702, -1, -0.625, 1.7321, -1.7321, -0.625, 1, -0.7333, -0.2083, 1.2702, 0, -0.2083, 1.4667, -1, -0.625, 1.7321, 0, -0.2083, 1.4667, 0, -0.625, 2, -1, -0.625, 1.7321, 0, 0.625, 0, 0.2, 0.625, 0.3464, 0, 0.625, 0.4, 0, 0.625, 0, 0.3464, 0.625, 0.2, 0.2, 0.625, 0.3464, 0, 0.625, 0, 0.4, 0.625, 0, 0.3464, 0.625, 0.2, 0, 0.625, 0, 0.3464, 0.625, -0.2, 0.4, 0.625, 0, 0, 0.625, 0, 0.2, 0.625, -0.3464, 0.3464, 0.625, -0.2, 0, 0.625, 0, 0, 0.625, -0.4, 0.2, 0.625, -0.3464, 0, 0.625, 0, -0.2, 0.625, -0.3464, 0, 0.625, -0.4, 0, 0.625, 0, -0.3464, 0.625, -0.2, -0.2, 0.625, -0.3464, 0, 0.625, 0, -0.4, 0.625, 0, -0.3464, 0.625, -0.2, 0, 0.625, 0, -0.3464, 0.625, 0.2, -0.4, 0.625, 0, 0, 0.625, 0, -0.2, 0.625, 0.3464, -0.3464, 0.625, 0.2, 0, 0.625, 0, 0, 0.625, 0.4, -0.2, 0.625, 0.3464, 0, -0.625, 0, 0, -0.625, 2, 1, -0.625, 1.7321, 0, -0.625, 0, 1, -0.625, 1.7321, 1.7321, -0.625, 1, 0, -0.625, 0, 1.7321, -0.625, 1, 2, -0.625, 0, 0, -0.625, 0, 2, -0.625, 0, 1.7321, -0.625, -1, 0, -0.625, 0, 1.7321, -0.625, -1, 1, -0.625, -1.7321, 0, -0.625, 0, 1, -0.625, -1.7321, 0, -0.625, -2, 0, -0.625, 0, 0, -0.625, -2, -1, -0.625, -1.7321, 0, -0.625, 0, -1, -0.625, -1.7321, -1.7321, -0.625, -1, 0, -0.625, 0, -1.7321, -0.625, -1, -2, -0.625, 0, 0, -0.625, 0, -2, -0.625, 0, -1.7321, -0.625, 1, 0, -0.625, 0, -1.7321, -0.625, 1, -1, -0.625, 1.7321, 0, -0.625, 0, -1, -0.625, 1.7321, 0, -0.625, 2)

[sub_resource type="PlaneMesh" id="PlaneMesh_45h33"]
size = Vector2(0.4, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_drxaa"]
data = PackedVector3Array(0.2, 0, 0.5, -0.2, 0, 0.5, 0.2, 0, -0.5, -0.2, 0, 0.5, -0.2, 0, -0.5, 0.2, 0, -0.5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_11yxf"]
data = PackedVector3Array(0.2, 0, 0.5, -0.2, 0, 0.5, 0.2, 0, -0.5, -0.2, 0, 0.5, -0.2, 0, -0.5, 0.2, 0, -0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_1dop2"]
top_radius = 0.1
bottom_radius = 1.5
height = 15.0
radial_segments = 8
rings = 2

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gg0a2"]
data = PackedVector3Array(0, 7.5, 0.1, 0.0707, 7.5, 0.0707, 0, 2.5, 0.5667, 0.0707, 7.5, 0.0707, 0.4007, 2.5, 0.4007, 0, 2.5, 0.5667, 0.0707, 7.5, 0.0707, 0.1, 7.5, 0, 0.4007, 2.5, 0.4007, 0.1, 7.5, 0, 0.5667, 2.5, 0, 0.4007, 2.5, 0.4007, 0.1, 7.5, 0, 0.0707, 7.5, -0.0707, 0.5667, 2.5, 0, 0.0707, 7.5, -0.0707, 0.4007, 2.5, -0.4007, 0.5667, 2.5, 0, 0.0707, 7.5, -0.0707, 0, 7.5, -0.1, 0.4007, 2.5, -0.4007, 0, 7.5, -0.1, 0, 2.5, -0.5667, 0.4007, 2.5, -0.4007, 0, 7.5, -0.1, -0.0707, 7.5, -0.0707, 0, 2.5, -0.5667, -0.0707, 7.5, -0.0707, -0.4007, 2.5, -0.4007, 0, 2.5, -0.5667, -0.0707, 7.5, -0.0707, -0.1, 7.5, 0, -0.4007, 2.5, -0.4007, -0.1, 7.5, 0, -0.5667, 2.5, 0, -0.4007, 2.5, -0.4007, -0.1, 7.5, 0, -0.0707, 7.5, 0.0707, -0.5667, 2.5, 0, -0.0707, 7.5, 0.0707, -0.4007, 2.5, 0.4007, -0.5667, 2.5, 0, -0.0707, 7.5, 0.0707, 0, 7.5, 0.1, -0.4007, 2.5, 0.4007, 0, 7.5, 0.1, 0, 2.5, 0.5667, -0.4007, 2.5, 0.4007, 0, 2.5, 0.5667, 0.4007, 2.5, 0.4007, 0, -2.5, 1.0333, 0.4007, 2.5, 0.4007, 0.7307, -2.5, 0.7307, 0, -2.5, 1.0333, 0.4007, 2.5, 0.4007, 0.5667, 2.5, 0, 0.7307, -2.5, 0.7307, 0.5667, 2.5, 0, 1.0333, -2.5, 0, 0.7307, -2.5, 0.7307, 0.5667, 2.5, 0, 0.4007, 2.5, -0.4007, 1.0333, -2.5, 0, 0.4007, 2.5, -0.4007, 0.7307, -2.5, -0.7307, 1.0333, -2.5, 0, 0.4007, 2.5, -0.4007, 0, 2.5, -0.5667, 0.7307, -2.5, -0.7307, 0, 2.5, -0.5667, 0, -2.5, -1.0333, 0.7307, -2.5, -0.7307, 0, 2.5, -0.5667, -0.4007, 2.5, -0.4007, 0, -2.5, -1.0333, -0.4007, 2.5, -0.4007, -0.7307, -2.5, -0.7307, 0, -2.5, -1.0333, -0.4007, 2.5, -0.4007, -0.5667, 2.5, 0, -0.7307, -2.5, -0.7307, -0.5667, 2.5, 0, -1.0333, -2.5, 0, -0.7307, -2.5, -0.7307, -0.5667, 2.5, 0, -0.4007, 2.5, 0.4007, -1.0333, -2.5, 0, -0.4007, 2.5, 0.4007, -0.7307, -2.5, 0.7307, -1.0333, -2.5, 0, -0.4007, 2.5, 0.4007, 0, 2.5, 0.5667, -0.7307, -2.5, 0.7307, 0, 2.5, 0.5667, 0, -2.5, 1.0333, -0.7307, -2.5, 0.7307, 0, -2.5, 1.0333, 0.7307, -2.5, 0.7307, 0, -7.5, 1.5, 0.7307, -2.5, 0.7307, 1.0607, -7.5, 1.0607, 0, -7.5, 1.5, 0.7307, -2.5, 0.7307, 1.0333, -2.5, 0, 1.0607, -7.5, 1.0607, 1.0333, -2.5, 0, 1.5, -7.5, 0, 1.0607, -7.5, 1.0607, 1.0333, -2.5, 0, 0.7307, -2.5, -0.7307, 1.5, -7.5, 0, 0.7307, -2.5, -0.7307, 1.0607, -7.5, -1.0607, 1.5, -7.5, 0, 0.7307, -2.5, -0.7307, 0, -2.5, -1.0333, 1.0607, -7.5, -1.0607, 0, -2.5, -1.0333, 0, -7.5, -1.5, 1.0607, -7.5, -1.0607, 0, -2.5, -1.0333, -0.7307, -2.5, -0.7307, 0, -7.5, -1.5, -0.7307, -2.5, -0.7307, -1.0607, -7.5, -1.0607, 0, -7.5, -1.5, -0.7307, -2.5, -0.7307, -1.0333, -2.5, 0, -1.0607, -7.5, -1.0607, -1.0333, -2.5, 0, -1.5, -7.5, 0, -1.0607, -7.5, -1.0607, -1.0333, -2.5, 0, -0.7307, -2.5, 0.7307, -1.5, -7.5, 0, -0.7307, -2.5, 0.7307, -1.0607, -7.5, 1.0607, -1.5, -7.5, 0, -0.7307, -2.5, 0.7307, 0, -2.5, 1.0333, -1.0607, -7.5, 1.0607, 0, -2.5, 1.0333, 0, -7.5, 1.5, -1.0607, -7.5, 1.0607, 0, 7.5, 0, 0.0707, 7.5, 0.0707, 0, 7.5, 0.1, 0, 7.5, 0, 0.1, 7.5, 0, 0.0707, 7.5, 0.0707, 0, 7.5, 0, 0.0707, 7.5, -0.0707, 0.1, 7.5, 0, 0, 7.5, 0, 0, 7.5, -0.1, 0.0707, 7.5, -0.0707, 0, 7.5, 0, -0.0707, 7.5, -0.0707, 0, 7.5, -0.1, 0, 7.5, 0, -0.1, 7.5, 0, -0.0707, 7.5, -0.0707, 0, 7.5, 0, -0.0707, 7.5, 0.0707, -0.1, 7.5, 0, 0, 7.5, 0, 0, 7.5, 0.1, -0.0707, 7.5, 0.0707, 0, -7.5, 0, 0, -7.5, 1.5, 1.0607, -7.5, 1.0607, 0, -7.5, 0, 1.0607, -7.5, 1.0607, 1.5, -7.5, 0, 0, -7.5, 0, 1.5, -7.5, 0, 1.0607, -7.5, -1.0607, 0, -7.5, 0, 1.0607, -7.5, -1.0607, 0, -7.5, -1.5, 0, -7.5, 0, 0, -7.5, -1.5, -1.0607, -7.5, -1.0607, 0, -7.5, 0, -1.0607, -7.5, -1.0607, -1.5, -7.5, 0, 0, -7.5, 0, -1.5, -7.5, 0, -1.0607, -7.5, 1.0607, 0, -7.5, 0, -1.0607, -7.5, 1.0607, 0, -7.5, 1.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2wylh"]
lifetime_randomness = 0.47
emission_shape = 2
emission_sphere_radius = 1.0
gravity = Vector3(0, -8, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_2bspq"]
viewport_path = NodePath("Sprite3D/SubViewport")

[node name="Stairs" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 3.412)
script = ExtResource("1_a0wvy")

[node name="Stairs1" type="MeshInstance3D" parent="."]
transparency = 0.8
mesh = SubResource("CylinderMesh_1mm6u")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stairs1"]
collision_layer = 34
collision_mask = 513

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stairs1/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_nx80s")

[node name="InvisibleShield" type="MeshInstance3D" parent="Stairs1"]
transform = Transform3D(-1.08706e-08, -0.24869, 0.968583, 1, -4.37114e-08, 0, 4.23381e-08, 0.968583, 0.24869, -0.47656, 1.72244, -0.632586)
visible = false
mesh = SubResource("PlaneMesh_45h33")

[node name="StaticBody3D" type="StaticBody3D" parent="Stairs1/InvisibleShield"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stairs1/InvisibleShield/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_drxaa")

[node name="InvisibleShield2" type="MeshInstance3D" parent="Stairs1"]
transform = Transform3D(1.08854e-08, 0.249028, 0.968496, 1, -4.37114e-08, 1.76705e-15, 4.23343e-08, 0.968496, -0.249028, 0.500262, 1.72244, -0.613648)
visible = false
mesh = SubResource("PlaneMesh_45h33")

[node name="StaticBody3D" type="StaticBody3D" parent="Stairs1/InvisibleShield2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stairs1/InvisibleShield2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_11yxf")

[node name="InvisiblePillar" type="MeshInstance3D" parent="Stairs1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7, 0)
visible = false
mesh = SubResource("CylinderMesh_1dop2")

[node name="StaticBody3D" type="StaticBody3D" parent="Stairs1/InvisiblePillar"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stairs1/InvisiblePillar/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_gg0a2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AddStoneParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03022, 0)
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
process_material = SubResource("ParticleProcessMaterial_2wylh")
draw_pass_1 = ExtResource("3_aoeg0")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
billboard = 1
texture = SubResource("ViewportTexture_2bspq")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
sdf_oversize = 0
sdf_scale = 2
size = Vector2i(400, 100)

[node name="MarginContainer" type="MarginContainer" parent="Sprite3D/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Sprite3D/SubViewport/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Press E to put items.
0 / 100 "
horizontal_alignment = 1

[connection signal="mouse_entered" from="Stairs1/StaticBody3D" to="." method="_on_static_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="Stairs1/StaticBody3D" to="." method="_on_static_body_3d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
